	 once or fail to align.
   * Added --reorder option.  When enabled, the order of the SAM records output
     by Bowtie 2 will match the order of the input reads even when -p is set
	 greater than 1.  This is disabled by default; enabling it makes Bowtie 2
	 somewhat slower and use somewhat more memory when -p is set greater than
	 1.
   * Fixed some minor documentation issues.

Version 2.0.0-beta4 - December 5, 2011
   * Accuracy improvements.
   * Speed improvements in some situations.
   * Fixed a handful of crashing bugs.
   * Fixed some documentation bugs.
   * Fixed bug whereby --version worked incorrectly.
   * Fixed formatting bug with MD:Z optional field that would sometimes fail to
     follow a mismatch with a number.
   * Added -D option for controlling the maximum number of seed extensions that
     can fail in a row before we move on.  This option or something like it
	 will eventually replace the argument to -M.
   * Added -R option to control maximum number of times re-seeding is attempted
     for a read with repetitive seeds.
   * Changed default to --no-dovetail.  Specifying --dovetail turns it back on.
   * Added second argument for --mp option so that user can set maximum and
     minimum mismatch penalties at once.  Also tweaked the formula for
     calculating the quality-aware mismatch penalty.

Version 2.0.0-beta3 - November 1, 2011
   * Accuracy improvements.
   * Speed improvements in some situations.
   * Fixed a handful of crashing bugs.
   * Fixed a bug whereby number of repetitively aligned reads could be
     misreported in the summary output.

Version 2.0.0-beta2 - October 16, 2011
   * Added manual, both included in the download package and on the website.
     The website will always have the manual for the latest version.
   * Added Linux 32-bit and 64-bit binary packages.  Mac OS X packages to come.
     Still working on a Windows package.
   * Fixed a bug that led to crashes when seed-alignment result memory was
     exhausted.