@@ -22,6 +22,7 @@
 
 #include <ctime>
 #include <iostream>
+#include <sstream>
 #include <iomanip>
 
 using namespace std;
@@ -53,9 +54,11 @@ public:
 		time_t hours   = (passed / 60) / 60;
 		time_t minutes = (passed / 60) % 60;
 		time_t seconds = (passed % 60);
-		out << _msg << setfill ('0') << setw (2) << hours << ":"
-		            << setfill ('0') << setw (2) << minutes << ":"
-		            << setfill ('0') << setw (2) << seconds << endl;
+		std::ostringstream oss;
+		oss << _msg << setfill ('0') << setw (2) << hours << ":"
+		           << setfill ('0') << setw (2) << minutes << ":"
+		           << setfill ('0') << setw (2) << seconds << endl;
+		out << oss.str();
 	}
 	
 private:
@@ -70,13 +73,15 @@ static inline void logTime(std::ostream& os, bool nl = true) {
 	time_t now;
 	time(&now);
 	current = localtime(&now);
-	os << setfill('0') << setw(2)
+	std::ostringstream oss;
+	oss << setfill('0') << setw(2)
 	    << current->tm_hour << ":"
 	    << setfill('0') << setw(2)
 	    << current->tm_min << ":"
 	    << setfill('0') << setw(2)
 	    << current->tm_sec;
-	if(nl) os << std::endl;
+	if(nl) oss << std::endl;
+	os << oss.str();
 }
 
 #endif /*TIMER_H_*/
